# blogs-md-easy

./: .gitignore  Cargo.toml  README.md  justfile
src/: lib.rs  main.rs
tests/: one.md  template.html  tests.rs
