[package]
name = "markdown-to-html-template"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
markdown = "1.0.0-alpha.16"
nom = "7.1.3"
nom_locate = "4.2.0"
