[package]
name = "blogs-md-easy"
description = "Iteratively convert a collection of Markdown files into a respective HTML template."
version = "0.3.4"
edition = "2021"
keywords = ["markdown", "html", "template", "blog"]
categories = ["command-line-interface", "config", "web-programming"]
authors = ["BritishWerewolf <britishwerewolfdev@gmail.com>"]
homepage = "https://github.com/BritishWerewolf/blogs-md-easy"
repository = "https://github.com/BritishWerewolf/blogs-md-easy"
documentation = "https://docs.rs/crate/blogs-md-easy"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
markdown = "1.0.0-alpha.16"
nom = "7.1.3"
nom_locate = "4.2.0"
